--- a/random_user/src/style.css
+++ b/random_user/src/style.css
@@ -3,23 +3,22 @@
 /* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: var(--secondary) var(--primary);
+  scrollbar-color: rgb(150, 150, 150) rgba(162, 162, 162, 0.496);
 }
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 5px;
+  width: 6px;
 }
 
 *::-webkit-scrollbar-track {
-  background: var(--primary);
-  border-radius: 5px;
+  background: transparent;
+  border-radius: 99px;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: var(--secondary);
-  border-radius: 14px;
-  /* border: 3px solid var(--primary); */
+  background-color: rgb(150, 150, 150);
+  border-radius: 99px;
 }
 
 @tailwind components;
